@@ -11,7 +11,7 @@ from modules.siprcrack import SipRemoteCrack
 from lib.params import get_sipremotecrack_args
 
 def main():
-    ip, rport, rexten, prefix, ext_len, proto, domain, contact_domain, user_agent, wordlist, nthreads, nocolor = get_sipremotecrack_args()
+    ip, rport, rexten, prefix, user, ext_len, proto, domain, contact_domain, user_agent, wordlist, nthreads, verbose, nocolor = get_sipremotecrack_args()
 
     s = SipRemoteCrack()
     s.ip = ip
@@ -21,10 +21,12 @@ def main():
     s.contact_domain = contact_domain
     s.exten = rexten
     s.prefix = prefix
+    s.user = user
     s.ext_len = ext_len
     s.user_agent = user_agent
     s.threads = nthreads
     s.wordlist = wordlist
+    s.verbose = verbose
     s.nocolor = nocolor
 
     s.start()
